Added menu and footer block's

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
 	<div class="menuBlock">
 		<div class="menuBlock__title">
-			<p>Menu</p> 
+			<h2>Menu</h2> 
 			<img src="img/divider1.png" alt="">
 		</div>
 		<ul class="menuBlock__menu">
@@ -134,7 +134,143 @@
 			<li>Third page</li>
 			<li>Fourt page</li>
 		</ul>
+		<div class="menuBlock__leftForm">
+			<ul>
+				<li>
+					<i>sample text</i>
+					<h3>1</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>2</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>3</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>4</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>5</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>6</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>7</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+			</ul>
+		</div>
+		<div class="menuBlock__rightForm">
+			<ul>
+				<li>
+					<i>sample text</i>
+					<h3>8</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>9</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>10</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>11</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>12</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>13</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+				<li>
+					<i>sample text</i>
+					<h3>14</h3>
+					<hr>
+					<p>sample text 2</p>
+				</li>
+			</ul>
+		</div>
 	</div>
-
+	
+	<div class="footerBlock">
+		<div class="footerBlock__column">
+			<div class="footerBlock__title">
+				<p>Contact</p> 
+				<img src="img/divider1.png" alt="">
+			</div>
+			<div class="footerBlock__leftText">
+				<p>Reggie</p>
+				<i>Reggie left sample text</i>
+			</div>
+			<div class="footerBlock__rightText">
+				<p>Presenations</p>
+				<i>Presentations right sample text</i>
+			</div>
+			<div class="footerBlock__contact">
+				<div>
+					<input type="text" value="Name" id="name" 
+					onfocus="this.value=(this.value=='Name')?this.value='':this.value;"
+					onblur="this.value=(this.value=='')?this.value='Name':this.value;">
+				</div>
+				<div>
+					<input type="text" value="Email" id="email"
+					onfocus="this.value=(this.value=='Email')?this.value='':this.value;"
+					onblur="this.value=(this.value=='')?this.value='Email':this.value;">
+				</div>
+				<div>
+					<input type="text" value="Message" id="message"
+					onfocus="this.value=(this.value=='Message')?this.value='':this.value;"
+					onblur="this.value=(this.value=='')?this.value='Message':this.value;">
+				</div>
+			</div>
+			<div class="send">
+				<input type="button" value="Send">
+			</div>
+		</div>
+		<div class="links">
+			<div class="links__icons">
+				<i class="fab fa-facebook-f"></i>
+			</div>
+			<div class="links__icons">
+				<i class="fas fa-mail-bulk"></i>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
