--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet">
+	<script src="js/script.js"></script>
 </head>
 <body>
 
 	<div class="headerBlock">
 		<div class="headerBlock__column">
 			<ul class="headerBlock__menu">
-				<li>Home</li>
-				<li>Special</li>
-				<li>About</li>
-				<li>Menu</li>
-				<li>Contact</li>
+				<li><a href="#special">Special</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#menu">Menu</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 			<div class="headerBlock__title">
 				<p>Veggies es bonus vobis,</p> 
@@ -26,18 +26,18 @@
 		</div>
 	</div>
 
-	<div class="yellowBlock">
-		<div class="yellowBlock_column">
+	<div class="yellowBlock" id="special">
+		<div class="yellowBlock_column" id="food">
 			<i class="fas fa-carrot"></i>
 			<h1>Food</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima commodi praesentium dolores, ducimus tempora ipsum.</p>
 		</div>
-		<div class="yellowBlock_column">
+		<div class="yellowBlock_column" id="drinks">
 			<i class="fas fa-coffee"></i>
 			<h1>Drinks</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis sed expedita, soluta molestias quam. Aut inventore.</p>
 		</div>
-		<div class="yellowBlock_column">
+		<div class="yellowBlock_column" id="dessert">
 			<i class="fas fa-ice-cream"></i>
 			<h1>Dessert</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus magnam necessitatibus officiis blanditiis est nisi.</p>
@@ -111,7 +111,7 @@
 		</div>
 	</div>
 
-	<div class="aboutUsBlock">
+	<div class="aboutUsBlock" id="about">
 		<div class="aboutUsBlock__text">
 			<p>About us</p>
 			<img src="img/divider1.png" alt="">
@@ -119,11 +119,11 @@
 			<p>greens fava bean potato quandong celery.</p>
 			<p>Bunnya nuts black-eyed pea prainie turnup </p>
 			<p>leek lentil tumip greens parsnip.</p>
-			<p id="aboutUsTitleHead">j.Hik</p>
+			<p id="aboutUsTitleHead"><a onclick="changeBackground()">j.Hik</a></p>
 		</div>
 	</div>
 
-	<div class="menuBlock">
+	<div class="menuBlock" id="menu">
 		<div class="menuBlock__title">
 			<h2>Menu</h2> 
 			<img src="img/divider1.png" alt="">
@@ -228,7 +228,7 @@
 		</div>
 	</div>
 	
-	<div class="footerBlock">
+	<div class="footerBlock" id="contact">
 		<div class="footerBlock__column">
 			<div class="footerBlock__title">
 				<p>Contact</p> 
